--- a/src/Web/Style/Style.css
+++ b/src/Web/Style/Style.css
@@ -161,7 +161,10 @@ input.form-control {
     display: inline;
     height: 25px;
 }
-
+select.form-control {
+    display: inline;
+    height: 30px;
+}
 .glyphicon-size-md {
     font-size: 16px;
 }
