--- a/src/Web/Style/Style.css
+++ b/src/Web/Style/Style.css
@@ -1,6 +1,6 @@
 body, td {
     margin: 0px;
-    padding:0;
+    padding: 0;
     line-height: 20px;
     font-size: 12px;
     color: #000000;
@@ -37,9 +37,11 @@ textcss {
     height: 20px;
     width: 250px;
 }
-body a:hover,body a:focus {
-    text-decoration:none;
+
+body a:hover, body a:focus {
+    text-decoration: none;
 }
+
 a:link {
     font-size: 12px;
     color: #000000;
@@ -67,7 +69,7 @@ a.na:visited {
     font-size: 12px;
     font-weight: bold;
     color: Red;
-    text-decoration:none;
+    text-decoration: none;
 }
 
 a.na:hover {
@@ -161,14 +163,17 @@ input.form-control {
     display: inline;
     height: 25px;
 }
+
 select.form-control {
     display: inline;
     height: 30px;
 }
+
 radio.form-control {
     display: inline;
     height: 30px;
 }
+
 input[type=file].form-control {
     display: inline;
     height: 34px;
@@ -224,12 +229,33 @@ table {
     background-color: #337ab7;
     border-color: #337ab7;
 }
+
 td.filter_box {
-        text-align:center;
+    text-align: center;
 }
+
 .Wdate {
-width:100px;
+    width: 100px;
 }
+
 select.date_select {
-    width:80px;
+    width: 80px;
+}
+
+.login_system_name {
+    color: #FFFFFF;
+    font-size: 38px;
+    font-weight: bold;
+    text-align: center;
+    position:absolute;
+    top:100px;
+    bottom:0;
+    right:0;
+    left:0;
+    text-align:center;
+    margin:0 auto;
+    height:80px;
+}
+#ListTreeView a.current_menu {
+    color:#428bca;
 }
